Add modal for adding new entry, add form for adidng new entry, add custom star rating input, refactor rating to show stars

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,3 +5,16 @@
 .loader {
   margin-top: 10em;
 }
+
+.checked-star {
+  color: orange;
+}
+
+.rating-star:hover {
+  color: gray;
+  cursor: pointer;
+}
+
+.rating-star.checked-star:hover {
+  color: orange;
+}
